kubernetes/applications/bridges/zigbee2mqtt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: radio-operators
    app.kubernetes.io/part-of: everlab
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
